First working Console Game